# llvm-dimeta

./: .clang-tidy  .codespellrc  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: dimetaToolchain.cmake
cmake/modules/: coverage-lcov.cmake  dimeta-format.cmake  dimeta-llvm-lit.cmake  dimeta-llvm.cmake  dimeta-target-util.cmake
lib/: CMakeLists.txt
lib/pass/: CMakeLists.txt  DimetaPass.cpp  DimetaPass.h
lib/support/: Logger.h
lib/type/: CMakeLists.txt  DIFinder.cpp  DIFinder.h  DIFortranTypeExtractor.cpp  DIFortranTypeExtractor.h  DIParser.cpp  DIParser.h  DIPath.cpp  DIPath.h  DIRootType.cpp  DIRootType.h  DITypeExtractor.cpp  DITypeExtractor.h  DIUtil.cpp  DIUtil.h  DIVisitor.h  DIVisitorUtil.cpp  DIVisitorUtil.h  DataflowAnalysis.cpp  DataflowAnalysis.h  DefUseAnalysis.h  Dimeta.cpp  Dimeta.h  DimetaData.h  DimetaIO.cpp  DimetaIO.h  DimetaParse.cpp  DimetaParse.h  GEP.cpp  GEP.h  MemoryOps.h  MetaIO.cpp  MetaIO.h  MetaParse.cpp  MetaParse.h  ModuleCUTypes.cpp  SourceLocParser.cpp  SourceLocType.cpp  TBAA.cpp  TBAA.h  (+2 more)
script/: CMakeLists.txt  apply.tmpl
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/pass/: malloc_type_opt_out.c  unsigned_malloc.c
test/pass/c/: complex_nested_allocate.c  full_nested_allocate.c  global_basic.c  global_basic_ptr.c  global_const_char.c  global_heap.c  global_heap_extern.c  heap_argument.c  heap_argument_fixed.c  heap_argument_void.c  heap_array_of_vector.c  heap_assign_array_milc_mock.c  heap_external_function.c  heap_function.c  heap_lhs_obj.c  heap_lhs_obj_assign.c  heap_lhs_obj_opt.c  heap_lhs_obj_opt_pad.c  heap_loop_source_loc.c  heap_loop_unroll.c  heap_malloc.c  heap_malloc_fixed.c  heap_malloc_of_array.c  heap_matrix.c  heap_matrix_simple.c  heap_matrix_simple_2.c  heap_matrix_typeart.c  heap_milc_mrecv_mock.c  heap_milc_struct_mock.c  heap_nested_allocate.c  heap_param_first.c  heap_return.c  heap_return_2.c  heap_return_malloc.c  heap_struct_member.c  heap_struct_member_member.c  heap_tachyon_grid_mock.c  heap_tachyon_mock.c  heap_tachyon_mock_images.c  heap_unsigned.c  (+38 more)
test/pass/call/: function_arg.c  function_arg.cpp  function_get_arg.c  function_get_arg.cpp  local_malloc.c  local_new.cpp  local_new_get.cpp  unknown_alloc_argument_backward_cuda_like.c  unknown_alloc_argument_backward_wrong_arg.c  unknown_alloc_auto_reject.c  unknown_alloc_return_flow.c
test/pass/cpp/: heap_argument.cpp  heap_argument_fixed.cpp  heap_case_inheritance.cpp  heap_case_inheritance_heapallocsite.cpp  heap_external_function.cpp  heap_function.cpp  heap_inlined_op.cpp  heap_lhs_function.cpp  heap_lhs_function_opt.cpp  heap_lulesh_allocate.cpp  heap_lulesh_domain_mock.cpp  heap_lulesh_mock.cpp  heap_lulesh_mock_char.cpp  heap_new.cpp  heap_new_loop_matrix.cpp  heap_return.cpp  heap_return_2.cpp  heap_struct_member.cpp  heap_struct_member_member.cpp  heap_template_class.cpp  heap_vector_operator.cpp  heap_vector_operator_opt.cpp  stack_basics.cpp  stack_class_basic.cpp  stack_class_basic_static.cpp  stack_class_class.cpp  stack_class_inheritance.cpp  stack_class_inheritance_deep.cpp  stack_class_inheritance_deep_virtual.cpp  stack_class_inheritance_virtual.cpp  stack_class_multi_inheritance.cpp  stack_class_multi_inheritance_virtual.cpp  stack_class_ref_basic.cpp  stack_domain_member_lulesh_mock.cpp  stack_enum_class.cpp  stack_nullpointer.cpp  stack_static_members.cpp  stack_static_members_array.cpp  stack_std_vector.cpp  stack_std_vector_allocator.cpp  (+4 more)
test/pass/cuda/: heap_cudamalloc.c  heap_cudamalloc_member.c  heap_cudamalloc_member_2.c  heap_cudamalloc_member_nested.c  heap_template.ll  heap_template_no_assign.ll
test/pass/fortran/: 01_heap.f90  02_heap_double.f90  03_heap_mold.f90  04_heap_mold_dim2.f90  05_stack_array.f90  06_stack_array_dim2.f90  07_bounds.f90  08_bounds_nogep.f90  09_local_bounds.f90  10_local_bounds_alloc_of_alloc.f90  11_double_allocatable.f90  12_inheritance.f90  13_inheritance_access.f90  14_inheritance_source.f90  15_inheritance_derived.f90  16_nested_allocate.f90  17_complex_nested_allocate.f90  18_full_nested_allocate.f90  19_pointer_alloc_1d.f90  20_pointer_alloc_2d.f90  21_pointer_alloc_1d_opt.f90  22_pointer_alloc_2d_opt.f90  23_char_alloc.f90  24_char_member_alloc.f90  25_char_fixed_stack.f90  26_char_member_fixed_alloc.f90  27_char_fixed_stack_pass.f90  28_char_indexing.f90  29_udt_char_2d.f90  30_alloc_2d.f90  31_local_bounds_alloc_of_alloc_2d.f90  32_pointer_alloc_1d_lower_bound.f90  33_pointer_alloc_2d_bounds.f90
test/pass/forward_decl/: lit.local.cfg  lulesh-init-mock.cpp  lulesh-mock.cpp  lulesh-mock.h
test/pass/gep/: array.c  array_composite.c  array_composite_ex.c  array_composite_offset_zero.c  array_composite_s.c  array_composite_s_offset_zero.c  array_composite_sub.c  array_composite_sub_offset_zero.c  gep_pointer_to_member.cpp  gep_pointer_to_member_fwd.cpp  global_nested.c  param_first_nested.c  param_first_nested_padding.cpp  ptr.c  vector_operator.cpp
test/pass/hip/: heap_hipmalloc.c  heap_hipmalloc_member.c  heap_hipmalloc_member_2.c  heap_hipmalloc_member_nested.c  hip_template.ll
test/pass/inheritance/: class_constructor.cpp  class_no_constructor.cpp  ebo.cpp  ebo_heap.cpp  ebo_heap_2.cpp  ebo_heap_3.cpp  ebo_heap_multi_inheritance.cpp  ebo_heap_static_3.cpp  ebo_only_heap_multi_inheritance.cpp  no_ebo_heap_multi_inheritance.cpp  no_member_base_ebo.cpp  no_member_derived.cpp  stack_class_inheritance.cpp  stack_class_inheritance_deep.cpp  stack_class_inheritance_deep_virtual.cpp  stack_class_inheritance_virtual.cpp  stack_class_multi_inheritance.cpp  stack_class_multi_inheritance_virtual.cpp  stack_std_vector.cpp  stack_std_vector_allocator.cpp  struct_constructor.cpp  struct_no_constructor.cpp
test/pass/ir/: 01_endless_recursion.ll  02_mpicxx.ll  03_lulesh_ad.ll  04_lulesh_ad_gep.ll  05_vector_copy_return.ll  06_amg_llvm_19.ll  07_tbaa.ll  07_tbaa_offset_16.ll  07_tbaa_offset_8.ll  08_tbaa.ll  08_tbaa_offset_16.ll  08_tbaa_offset_8.ll  (+5 more)
test/verifier/: CMakeLists.txt  TestPass.cpp  opt-shim.in  reduce-tester.in
(+8 files in other folders)
